<resources>
    <string name="app_name">CoffeeQuiz</string>
    <string name="name">Wpisz swoje imię</string>
    <string name="q1">Jak nazywa się osoba zajmująca się wybieraniem, parzeniem oraz podawaniem kawy?</string>
    <string name="q1a">kiper</string>
    <string name="q1b">barista</string>
    <string name="q1c">kawosz</string>
    <string name="q2">Jak nazywa się składnik kawy, który działa pobudzająco na organizm człowieka?</string>
    <string name="q2a">nikotyna</string>
    <string name="q2b">mateina</string>
    <string name="q2c">kofeina</string>
    <string name="q3">Jak przyrządza się kawę po turecku?</string>
    <string name="q3a">W specjalnej kawiarce, gdzie kawa parzona jest pod ciśnieniem</string>
    <string name="q3b">Trzykrotnie gotuje się w małym tygielku</string>
    <string name="q3c">Zalewa się mieloną kawę wrzącą wodą</string>
    <string name="q4">Którym zmysłem najintensywniej odczuwamy kawę?</string>
    <string name="q4a">wzrokiem</string>
    <string name="q4b">węchem</string>
    <string name="q4c">smakiem</string>
    <string name="q5">Największym światowym eksporterem kawy jest ...</string>
    <string name="q5a">Arabia Saudyjska</string>
    <string name="q5b">Peru</string>
    <string name="q5c">Brazylia</string>
    <string name="q6">Która kawa ma w sobie najwięcej mleka?</string>
    <string name="q6a">Latte macchiato</string>
    <string name="q6b">Cappuccino</string>
    <string name="q6c">Caffe americano</string>
    <string name="q7">Jak nazywa się największa na świecie sieć kawiarni?</string>
    <string name="q7a">Tchibo</string>
    <string name="q7b">Starbucks</string>
    <string name="q7c">Lavazza</string>
    <string name="q8">Po co wraz z espresso podaje się szklankę wody?</string>
    <string name="q8a">By złagodzić intensywny smak kawy</string>
    <string name="q8b">By rozcieńczyć zbyt mocną kawę wedle uznania</string>
    <string name="q8c">By przpłukać kubki smakowe przed smakowaniem espresso</string>
    <string name="q9">Skąd pozyskuje się ziarna najdroższej kawy świata kopi luwak?</string>
    <string name="q9a">Wyłuskując ziarna z odchodów indonezyjskiego ssaka drapieżnego</string>
    <string name="q9b">Zrywając najmłodsze ziarna z samego czubka kawowca</string>
    <string name="q9c">Ze specjalnego gatunku kawowca, którego ziarna można zrywać tylko raz na 5 lat</string>
    <string name="q10">Ristretto to rodzaj kawy ...</string>
    <string name="q10a">bardzo słabej, z dużą ilością mleka</string>
    <string name="q10b">podawanej z alkoholem</string>
    <string name="q10c">jeszcze mocniejszej niż espresso</string>
    <string name="q11">Które z podanych to gatunki kawy?</string>
    <string name="q11a">Arabica</string>
    <string name="q11b">Pu-erh</string>
    <string name="q11c">Robusta</string>
    <string name="q11d">Liberica</string>
    <string name="q11e">Oolong</string>
    <string name="Toast1">"Gratulacje "</string>
    <string name="toast2">"! Twój wynik to: "</string>
    <string name="Toast3">/11</string>
    <string name="buttonText">zakończ</string>
</resources>
